makeing changes from another branch

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello this is my 1st Html file using github</h1>
+    <h1>hello this is my 1st Html file using github
+        now i have created a branch name main2 
+    </h1>
 </body>
 </html>
